# nhtsa-mcp

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  TASKS.md  demo.tape  pyproject.toml
.claude/: settings.local.json
app/: config.py  logging_config.py  main.py
app/mcp_tools/: __init__.py  carseat.py  complaints.py  decode_vin.py  ratings.py  recalls.py  vpic_batch.py  vpic_makes.py  vpic_manufacturers.py  vpic_models.py  vpic_parts.py  vpic_variables.py  vpic_vehicle_types.py  vpic_wmi.py
app/models/: inputs.py  outputs.py
app/nhtsa_clients/: api_nhtsa_client.py  base_client.py  vpic_client.py
app/security/: cache.py  rate_limiter.py  sanitizer.py
cli/: llm_agent.py  main.py  mcp_client.py
tests/: conftest.py
tests/cli/: test_cli_smoke.py  test_llm_stub.py
tests/integration/: test_live_nhtsa.py
tests/unit/: test_cache.py  test_inputs.py  test_inputs_vpic.py  test_rate_limiter.py  test_sanitizer.py
tests/unit/test_tools/: test_carseat.py  test_complaints.py  test_decode_vin.py  test_ratings.py  test_recalls.py  test_vpic_batch.py  test_vpic_makes.py  test_vpic_manufacturers.py  test_vpic_models.py  test_vpic_parts.py  test_vpic_variables.py  test_vpic_vehicle_types.py  test_vpic_wmi.py
