[project]
name = "nhtsa-mcp"
version = "0.1.0"
description = "MCP server for NHTSA vehicle safety APIs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mcp[cli]>=1.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
nhtsa-mcp = "app.main:run"
nhtsa-cli = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = ["integration: requires live NHTSA network access"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["UP046", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
